hiberus-devs/force-app/main/default/objects/Product2/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Identificador externo del producto para los procesos de integración</description>
    <externalId>true</externalId>
    <label>ProductId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>