hiberus-devs/force-app/main/default/objects/Product2/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cantidad de Stock del producto en el almacén</description>
    <inlineHelpText>Inserte la cantidad  de producto</inlineHelpText>
    <label>Stock</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>