hiberus-devs/force-app/main/default/objects/Product2/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <description>Recoge la información del código de almacén de cara a poder establecer filtros en reports</description>
    <inlineHelpText>Inserte código de almacén. Por ejemplo: &quot;MAD&quot;</inlineHelpText>
    <label>Warehouse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>