hiberus-devs/force-app/main/default/objects/Product2/listViews/IntegrationProductsView.listView-meta.xml
<ListView>
    <fullName>IntegrationProductsView</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.EXTERNAL_ID</columns>
    <columns>ProductId__c</columns>
    <columns>Stock__c</columns>
    <columns>Warehouse__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProductId__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>IntegrationProductsView</label>
</ListView>